<?xml version="1.0" encoding="utf-8"?>
<LinearLayout
        xmlns:android="http://schemas.android.com/apk/res/android"
              xmlns:app="http://schemas.android.com/apk/res-auto"
              xmlns:tools="http://schemas.android.com/tools"
              android:layout_width="match_parent"
              android:layout_height="match_parent"
              android:orientation="vertical"
              android:paddingStart="@dimen/layout_padding"
              android:paddingEnd="@dimen/layout_padding"
              android:src="@drawable/portada_kotlin"
              tools:context="com.diplomado.aboutme2_bernardino.MainActivity_Aboutme">

    <TextView
            android:id="@+id/txt_aboutme"
            style="@style/NameStyle"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:fontFamily="sans-serif-black"
            android:text="@string/name"
            android:textAlignment="center" />

    <EditText
            android:id="@+id/nickname_edit"
            style="@style/NameStyle"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:ems="10"
            android:hint="@string/apodo"
            android:inputType="textPersonName"
            android:textAlignment="center" />

    <Button
            android:id="@+id/txt_button"
            style="@style/Widget.AppCompat.Button.Colored"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_gravity="center_horizontal"
            android:layout_marginTop="@dimen/layout_margin"
            android:fontFamily="@font/roboto"
            android:text="@string/verificar" />

    <TextView
            android:id="@+id/txt_apodo"
            style="@style/NameStyle"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text=""
            android:textAlignment="center"
            android:paddingBottom="@dimen/small_padding"
            android:visibility="gone"
            android:background="@color/colorAccent" />


    <ImageView
            android:id="@+id/img_aboutme"
            android:layout_width="176dp"
            android:layout_height="147dp"
            android:layout_gravity="center"
            android:layout_marginTop="@dimen/layout_margin"
            android:contentDescription="@string/imagen"
            android:src="@drawable/kotlin"/>

    <ScrollView
            android:id="@+id/scrollview_aboutme"
            android:layout_width="match_parent"
            android:layout_height="match_parent">

        <TextView
                android:id="@+id/txt_aboutme_2"
                style="@style/NameStyle"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:lineSpacingMultiplier="1.2"
                android:text="@string/aboutme" />
    </ScrollView>
</LinearLayout>